--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="UA">
+
 <head>
-    <meta charset="UTF-8">
-    <title>Title1</title>
+	<meta charset="UTF-8">
+	<title>Title1</title>
 </head>
+
 <body>
 
-<h1>say HELLO!</h1>
-<h2>bye!</h2>
-<h3>who can add here some text?</h3>
+	<h1>say HELLO!+1</h1>
+	<h2>bye!</h2>
+	<!-- <h3>who can add here some text?</h3> -->
+
 </body>
+
 </html>
