change html file again

--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
 <h2>bye!</h2>
 <h3>who can add here some text?</h3>
 <h2>My commit</h2>
-<h6>my last commit!</h6>
+<h6>my last commit!!</h6>
 </body>
 </html>
