--- a/index.html
+++ b/index.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <title>Title1</title>
-    <script !src="main.js"></script>
+	<meta charset="UTF-8">
+	<title>Title1</title>
+	<script !src="main.js"></script>
+	<!-- что значит !src ? напишите пожалуйста кто знает -->
 </head>
+
 <body>
 
-<h1>say HELLO!</h1>
-<h2>bye!</h2>
-<h3>who can add here some text?</h3>
-<h2>My commit</h2>
-<h6>my last commit!</h6>
+	<h1>say HELLO!</h1>
+	<h2>bye!</h2>
+	<h3>who can add here some text?</h3>
+	<h2>My commit</h2>
+	<h6>my last commit!</h6>
 </body>
+
 </html>
