В HTML5 есть и другие теги

--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
 <h3>who can add here some text?</h3>
 <h2>My commit</h2>
 <h6>my last commit!!</h6>
+<h1>Хватит плодить ЗАГОЛОВКИ!!!!!</h1>
 </body>
 </html>
