--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 
 	<h1>Хватит плодить ЗАГОЛОВКИ!!!!!</h1>
 	<h1> я создал еще один заголовок)</h1>
-	<div>
-		хочу что то изменить
+	<div class="awesome">
+		
 	</div>
 
 </body>
