--- a/index.html
+++ b/index.html
@@ -1,27 +1,14 @@
 <!DOCTYPE html>
-<html lang="UA">
-
+<html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Title1</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Document</title>
 </head>
-
-
 <body>
-
-	ghgjg
-
-	<h1>Хватит плодить ЗАГОЛОВКИ!!!!!</h1>
-	<h1> я создал еще один заголовок)</h1>
-	<div class="awesome">
-
-	</div>
-
+	
+	<header></header>
+	<main></main>
+	<footer></footer>
 </body>
-
 </html>
-
-
-
-
-тимитм
